# advent-of-code

./: .gitignore  .gitlab-ci.yml  README.md  devbox.json  go.mod  go.sum
.github/workflows/: ci.yml  go-test.yml  rust-test.yml
2020/rust/: Cargo.toml
2020/rust/src/: main.rs
2021/rust/: Cargo.toml
2021/rust/src/: main.rs
2022/go/: go.mod  go.sum
2022/rust/src/: main.rs
2022/zig/src/: day_1.zig  utils.zig
2023/rust/: Cargo.toml  justfile
2023/rust/daily-template/: Cargo.toml
2023/rust/daily-template/src/: part1.rs
2023/rust/day-01/: Cargo.toml
2023/rust/day-01/src/: part1.rs  part2.rs
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/src/: custom_error.rs  part1.rs  part2.rs
2023/rust/day-03/: Cargo.toml  input2.txt
2023/rust/day-03/src/: part1.rs  part2.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/src/: custom_error.rs  part1.rs  part2.rs
2023/rust/day-05/: Cargo.toml
2023/rust/day-05/src/: part1.rs
2024/: day2.cpp  day4.cpp  day5.zig
2024/cpp/: Untitled  day1  day1.cpp  day2  day2.cpp  day3.cpp
challenge/cmd/: cmd.go
challenge/day1/: a.go  b.go  b_test.go
challenge/day2/: a.go  a_test.go  b.go  import.go
challenge/example/: a_test.go
go/2020/: go.mod  go.sum  main.go
go/2020/challenge/: grid.go  input.go  passport.go
rust/: Cargo.toml  README.md
rust/2020/: Cargo.toml
rust/aoc2020/: Cargo.toml
rust/aoc2022/: Cargo.toml  \
rust/src/: common.rs  day1.rs  day2.rs  day3.rs  day4.rs  lib.rs  main.rs
src/: day_1.go  day_1_test.go
src/utils/: input.go
util/: map.go
zig/src/: day_1.zig  day_6.zig
(+160 files in other folders)
