[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
itertools = "0.12.0"
nom = "7.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
divan = "0.1.3"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.50"
